Cambios en la interfaz de Operaciones

--- a/C#/ServiPlusApp/ServiPlusApp/View/Tablas/ShowTable.resx
+++ b/C#/ServiPlusApp/ServiPlusApp/View/Tablas/ShowTable.resx
@@ -121,7 +121,7 @@
   <data name="bunifuGradientPanel1.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAABC4AAAAoCAYAAAAxObuoAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAEzLSURBVHhendjleh5JlrZtb8M709PTWAyuMpSZmZmZmZlZ
+        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAEzLSURBVHhendjleh5JlrZtb8M709PTWAyuMpSZmZmZmZlZ
         ZmZmZhJYaDEzM8uSzFgu7J754lNGTEZmZMSKlU/9OI91rE24r3qfHCSd/3GQeJnqfhf+l/vMaT/uiz/g
         K7u97nyD+regvtNu3Pd/QEO7ne40Bv2u1MRpO67ZH9DCbqs7rZR+BbWx2+xOuz+gg90mXCeln7W62G1w
         p9sf0MNuHa6X5COqj90ad/r9AQPsVuEGCT64MsRuhTvD/oARdstwo6h3Hhljt8SdcX/ABLtFuEmL3nhs
@@ -452,26 +452,53 @@
         V+s4+f8B9v+imJB5fysAAAAASUVORK5CYII=
 </value>
   </data>
-  <data name="bunifuButton24.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="bunifuButton21.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAACoAAAAoCAYAAACIC2hQAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAAJhSURBVFhH5Vk9U8JAEKW0S6LjjJ2WlpaWlpaWlpSWlpT+
-        A0tmIJiSkpKSkpLSURJTUlpiJe479nL5OBIgHJcZ38ybQNjbfdzd7m2g9e/Qd+Z34MCJXsC+N7/H+8CJ
-        XTY5PhDcd8L2wI2Gvhsu6bragpOBEz7T2Ct2Yw4IQgFHOQGrgbfhte79mhPMNrs9HILz+IKcd3PBdmdR
-        9Cg4i685TD30nI8bWt5FLkB9smhsHd+ZP3C4/eB74SM5+oHDN/erGKwu0zNMCchhdwNEah0apO9Grxx+
-        O/ROP2/lTB6bmCCWUQ4kTrInjzSTaWLPYqJYzmaQcSAGeQb2ZBXVxMxYjh7I8MxAG5TVoKwSkEGxmFsi
-        bYE4uIxPWJoCnzraQcemLIXoF1ieAmXbkzC0kEAl7LI8Bbo5zhlZIy27vC5YngLdtFI3q4gEZ4nN2p8J
-        ddkvGt68YVNIPSzLpGVfN8F6Q8vMnP9JxjeTKvNRr8TNJpUmqcWLOiyTkom6bNw00nPWZKabwsOazsgq
-        uSkqPFtRHX0vGFsmaVoWznvxPK4xtswxy1NAsyo+bEJCJcU+bLO8LJqw/KRBXpd42mBpWeC4EgMszqqs
-        PJUPemQ0E4MsiqXZXGib5jTsnftY8vAXr3FSspxyoBHIOkg7NES1gsVmuQwYkDgxSJE8SuS0csnzwAAa
-        OJQOzXG93MQpTkgOvzvo23ayjutTlqAUg51nUgd0V+Q8zjmvTfL5nWmMDwGxFcipcJ4Ktk/HRT6WqJO1
-        lroKcL7Hz+KS65/HN504JoG6i55R/smQJ2oibIzOXnPQav0B69S3OgubPhIAAAAASUVORK5CYII=
+        iVBORw0KGgoAAAANSUhEUgAAAIMAAAAnCAYAAAAsEPueAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAAKZSURBVHhe7Zw/aBRBFIevtNvdJJdcjPGChVgFERsrU6Sw
+        EElhEUEwkCLBJgERixQGi1iIqIWFZsNio40g2KQSyzRCII2E22NLy9iZbp3fuCOHvL3bO2zm7e/BRy4z
+        +6bZjzd/du8aDMZ/iyTIwt2gswD2gu428Q/cu+J2DhdJOzsTR+nyXtj9EIfpL/M3J55jhChub7VABUBS
+        HHR+9g70fOwgfzzx2bLaepavTO0QT8A9G1qGfyXYGf+SL7e28iuzi/mF9jzxFAhRWQZMCebiT04CmLQw
+        c0ccmPhHZRnstBB2D3Hxm+h7fvPsfXFA4i+VZCgqghUBa4Jr526JgxG/qSSDucBODRCB6wK9DJTBbBef
+        4gJMDawIuukrQ9LMWu7sgGsE/fSVIQ67L9C51fwoJhNdlMqA3YOrCpwe6kGpDHGQrqADZwlSItFHqQym
+        cR8dt6cfiolEH6IMxRRxio7589fFRKIPWYbx7BIa8cxBSiI6EWWw7yKYRq4X6oUog1s8bkzuiklEJ6IM
+        +AeNeB9BSiI6kStDlK6zMtQPec0QdW6g8VHzvZhEdCLK8DY4vozGJxP7YhLRiSgDHlCh8XV0lF9sXxUT
+        iT5EGRCm8QAdizP3xESij3IZTAM6uIisD6UyuFNIvNTCI+l6UCoDwnTY193Wpl6KyUQXfWVwuwpWh3rQ
+        VwaEqw7YZnJnoZuBMiRBNheH6Q9c9GDynTgI0cFAGRCYLtwrcNhdsELopJIMCBxROyEwZXANoY/KMiCK
+        CmGnDJxO3m1ts0ooYigZEMVR9VebZHg19s1KwW9a+c/QMrgonmza7186MH1gQLA0vfn3M/GDkX6foTcK
+        KRIzfZz0ikE8ZlQZeuPP7zilmxiM+MvIv+nE0BqNxm/eqpW5qr3w8wAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="bunifuButton22.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAIMAAAAnCAYAAAAsEPueAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAAC8SURBVHhe7dyxDcJAEEXB68AESIRIFEANlEInENEEogna
+        Qa7FYMv64AA3sLPSJKfL9sXbjFnMvXudHl1/paZx/3MKrU2Pm36gqM/+5xS+MVy2z+G8u1HEuO+/MYwf
+        DvsjRYz7FgMTMRBiIMRAiIEQAyEGQgyEGAgxEGIgxECIgRADIQZCDIQYCDEQYiDEQIiBEAMhBkIMhBgI
+        MRBiIMRAiIEQA7Eag/sMtazeZ6Co3xjcdKptcdPJmNZaewPA7n8S3nvkUwAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="bunifuButton23.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAIMAAAAnCAYAAAAsEPueAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAAJqSURBVHhe7ZwxSBthFMczdrtcNCaKGunQwUFEStGh2MFB
+        RIpDhgwdhCJKOyiItOCgOFhKEeyiaJTgUhch4OLk4NSl4CitF250dHS85uXeO+/i5VCc8r3/H36Q6Zb3
+        433fy333pRAkkrJ1/e7Qqq2D9qNsX09S/SqWO8DlfF4aD07XPGAE1QPbWahk3TyX92kRGdY6T73Z3CZo
+        I6hmxPeOizgxKk/uGCIDPfxlYQi0KYP9Y95M95L3JfurWYrduhRpLndyIIN5jPRNeMtdR4EQB2nn6lFd
+        AjKYy1jve28r81uEuN23/g5z2eMDGcyGlo+NzrNAiMQOARnM51XhtbeaPZFl47JScF9w+aOBDDqgDiFL
+        Rp1jLn80kEEPb/qmvD37qiFE7P4BMuhiPrct3aHKCtwHMuhiqH+8dXeADPqQ7lCfLr6xBn4ggz7e9hZF
+        Bpc18AMZdCKTRWSpgAw6Wewq+93BdkqsAmTQysf8D5FhgVWADFop5VcbMlD9WQXIoJUP+XXIAHyK3SuQ
+        AfhQvX0ZnCVWATJoJZgmLGeWVYAMWpEzDnS6mlWADBqhY3GNrpB27iJnGyCDPoLNY/O5Bsigj82Oc78z
+        hP99pEAGXUz2zMkScfPg+Btk0AOdhfyZ+eMvEeGRUgIZ9PA5tyN7hUsufzSQQQfyLoImiP3Mv1EufzSQ
+        wXxC08PDTWM4kMFcaI8QWhqi7yHiAhnMhKaG0Kd1d4kdQQIZzIFOPtOX2PI/AovgttwjNEdkwP0M7cd0
+        z6fgd+jzOZHgJnZ8TIrIAIyhSm8iW35PmRTc6WQAdu0r3+30uEs5EKR1Uqn/JMSeRg4YOygAAAAASUVO
+        RK5CYII=
 </value>
   </data>
   <data name="txtSearch.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAW4AAAAzCAYAAAC3xeISAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAANoSURBVHhe7d0tbFNRGIDhK3Fb0vPTqbudsyWTk8hJJBKD
+        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAANoSURBVHhe7d0tbFNRGIDhK3Fb0vPTqbudsyWTk8hJJBKD
         x5BAgtgcBk2CQJAgphAoBAlqFjGxoOpwqMLWjrERJuB87dfA6Em7v+7eC++XPFnIbn/Uy8ntOWvBMAzD
         /Cez0CpXvQ0bzsTn3oTdARt/AgAyRp00YSv9+7Fzyzc1p7Mda8u2vGiKddfZ2E8/T8beHABgOhP20+JX
         Ovra2pU1zezVzdxcOe9MeJZerD/24gCASwq9YcDLtmb3ciPLeW+i/M9wnH9BAMAV6bdtvKv5vdg4t/TQ
@@ -489,47 +516,22 @@
         gX/Blxl33AAAAABJRU5ErkJggg==
 </value>
   </data>
-  <data name="bunifuButton23.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="bunifuButton24.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAIMAAAAnCAYAAAAsEPueAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAAJqSURBVHhe7ZwxSBthFMczdrtcNCaKGunQwUFEStGh2MFB
-        RIpDhgwdhCJKOyiItOCgOFhKEeyiaJTgUhch4OLk4NSl4CitF250dHS85uXeO+/i5VCc8r3/H36Q6Zb3
-        433fy333pRAkkrJ1/e7Qqq2D9qNsX09S/SqWO8DlfF4aD07XPGAE1QPbWahk3TyX92kRGdY6T73Z3CZo
-        I6hmxPeOizgxKk/uGCIDPfxlYQi0KYP9Y95M95L3JfurWYrduhRpLndyIIN5jPRNeMtdR4EQB2nn6lFd
-        AjKYy1jve28r81uEuN23/g5z2eMDGcyGlo+NzrNAiMQOARnM51XhtbeaPZFl47JScF9w+aOBDDqgDiFL
-        Rp1jLn80kEEPb/qmvD37qiFE7P4BMuhiPrct3aHKCtwHMuhiqH+8dXeADPqQ7lCfLr6xBn4ggz7e9hZF
-        Bpc18AMZdCKTRWSpgAw6Wewq+93BdkqsAmTQysf8D5FhgVWADFop5VcbMlD9WQXIoJUP+XXIAHyK3SuQ
-        AfhQvX0ZnCVWATJoJZgmLGeWVYAMWpEzDnS6mlWADBqhY3GNrpB27iJnGyCDPoLNY/O5Bsigj82Oc78z
-        hP99pEAGXUz2zMkScfPg+Btk0AOdhfyZ+eMvEeGRUgIZ9PA5tyN7hUsufzSQQQfyLoImiP3Mv1EufzSQ
-        wXxC08PDTWM4kMFcaI8QWhqi7yHiAhnMhKaG0Kd1d4kdQQIZzIFOPtOX2PI/AovgttwjNEdkwP0M7cd0
-        z6fgd+jzOZHgJnZ8TIrIAIyhSm8iW35PmRTc6WQAdu0r3+30uEs5EKR1Uqn/JMSeRg4YOygAAAAASUVO
-        RK5CYII=
-</value>
-  </data>
-  <data name="bunifuButton22.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAAIMAAAAnCAYAAAAsEPueAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAAC8SURBVHhe7dyxDcJAEEXB68AESIRIFEANlEInENEEogna
-        Qa7FYMv64AA3sLPSJKfL9sXbjFnMvXudHl1/paZx/3MKrU2Pm36gqM/+5xS+MVy2z+G8u1HEuO+/MYwf
-        DvsjRYz7FgMTMRBiIMRAiIEQAyEGQgyEGAgxEGIgxECIgRADIQZCDIQYCDEQYiDEQIiBEAMhBkIMhBgI
-        MRBiIMRAiIEQA7Eag/sMtazeZ6Co3xjcdKptcdPJmNZaewPA7n8S3nvkUwAAAABJRU5ErkJggg==
-</value>
-  </data>
-  <data name="bunifuButton21.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAAIMAAAAnCAYAAAAsEPueAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAAKZSURBVHhe7Zw/aBRBFIevtNvdJJdcjPGChVgFERsrU6Sw
-        EElhEUEwkCLBJgERixQGi1iIqIWFZsNio40g2KQSyzRCII2E22NLy9iZbp3fuCOHvL3bO2zm7e/BRy4z
-        +6bZjzd/du8aDMZ/iyTIwt2gswD2gu428Q/cu+J2DhdJOzsTR+nyXtj9EIfpL/M3J55jhChub7VABUBS
-        HHR+9g70fOwgfzzx2bLaepavTO0QT8A9G1qGfyXYGf+SL7e28iuzi/mF9jzxFAhRWQZMCebiT04CmLQw
-        c0ccmPhHZRnstBB2D3Hxm+h7fvPsfXFA4i+VZCgqghUBa4Jr526JgxG/qSSDucBODRCB6wK9DJTBbBef
-        4gJMDawIuukrQ9LMWu7sgGsE/fSVIQ67L9C51fwoJhNdlMqA3YOrCpwe6kGpDHGQrqADZwlSItFHqQym
-        cR8dt6cfiolEH6IMxRRxio7589fFRKIPWYbx7BIa8cxBSiI6EWWw7yKYRq4X6oUog1s8bkzuiklEJ6IM
-        +AeNeB9BSiI6kStDlK6zMtQPec0QdW6g8VHzvZhEdCLK8DY4vozGJxP7YhLRiSgDHlCh8XV0lF9sXxUT
-        iT5EGRCm8QAdizP3xESij3IZTAM6uIisD6UyuFNIvNTCI+l6UCoDwnTY193Wpl6KyUQXfWVwuwpWh3rQ
-        VwaEqw7YZnJnoZuBMiRBNheH6Q9c9GDynTgI0cFAGRCYLtwrcNhdsELopJIMCBxROyEwZXANoY/KMiCK
-        CmGnDJxO3m1ts0ooYigZEMVR9VebZHg19s1KwW9a+c/QMrgonmza7186MH1gQLA0vfn3M/GDkX6foTcK
-        KRIzfZz0ikE8ZlQZeuPP7zilmxiM+MvIv+nE0BqNxm/eqpW5qr3w8wAAAABJRU5ErkJggg==
+        iVBORw0KGgoAAAANSUhEUgAAACgAAAAoCAYAAACM/rhtAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAAKqSURBVFhHzVgxbxMxFL6Rzb5GSGwwMvIT+AWIkQWJkRE2
+        kBg6wAQSEgMDsRMhIXXoxFCpExILFWLIwBDB2Y4YmKqSthQKzQDf8xlKj6dcmlzOftLXXHrPfl/ee35+
+        djav9MXogsrNTS3sqpZ2QFDSbBP+fO9K81ALc4t0w7DlCgxJnds7MO6UMF+1NN/w/GsaQPgH6YLsZ3ze
+        758dnQvTNSf986MzILYKY2NgArBk6gCCEyXsHuZ6Qj82TL+YqE5xBZ7agQcOOKPzoCuLQ/9jO+56MDOf
+        9KS9iwl3qgYaxBf8eB3MzS4+pMK8REj2mEkbBWx819K9JZvBfL3A/ZtKFLULoCkgfX7Ck29mIklhbcNz
+        VZSerAl3uSCWmnNToWQx1iv2dqBzUnzeYbVyA9sElSG2ViLvHsHNKL78wLYAHkc6Ny8CrVKIsS+gzIAo
+        EG73mfhwKdCD97AFARNWORJ60q0HellG+ySnFBn7vuz0O6OLSiYU3mOMu6K4nPVW3D0k5iGjEB0qt89R
+        mN069zIRDDL6U/lnMkBkt1NdIB4gOKESgz2QV0gBtIMkVf+qIIJ0yGFfpoD0FwkeNqov0oA/mA0RYvs4
+        4TzcyGg7wcO48iI+0F2p3FzzzQI8mNxeDE4Hf8/OtOdxSpGx5cmRUHNITSKjFAfC7uJUeTXQKwUu3cSh
+        5Ygd0D4GgdaxJNP2V9v9fwWHlQcqL6KFuisL6gvWAh1e4obavau9XSjPx+4jiDITLBPu08x3h3QjikFD
+        rKQWPEmOALnT3sL621RhXgP7/MSLw+ecsO8XunVFqJ82XyN9+tD2ujbTjVad+EKOyh4mrRg7JVCE8Tn0
+        R8qmJTQWW+iA/MX4CcMsyoVW6voL98F/O8QyhPITRm/AIPWS0xreIfCKdOfLsyz7DVxJ11Cfke6rAAAA
+        AElFTkSuQmCC
 </value>
   </data>
 </root>
