--- a/C#/ServiPlusApp/ServiPlusApp/View/SetTables/Servicios/Servicio.resx
+++ b/C#/ServiPlusApp/ServiPlusApp/View/SetTables/Servicios/Servicio.resx
@@ -118,80 +118,127 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="bunifuPanel1.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        AAABAAEAICAAAAEAIACoEAAAFgAAACgAAAAgAAAAQAAAAAEAIAAAAAAAABAAAOwAAADsAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAFwMDAGUOFAC8CxAA4gYJ
-        APIFBwD3BwsA8AoQANwLEACgAAAAUQAAAAkAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAIwsQALQMEQDzPFgC9G+i
-        BP+KyQT/mN4F/5zjBf+W2wX/hcIE/2CNA/4uRAHuCQ0A8AgKAIQAAAAQAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAgkOAI0MEQDyXIcD/Jje
-        Bf96sgT/SGkC+CIyAe4RGgDwChAA8xYgAe8pPAHvWoID/YjHBP+NzQX/RGMC9AkNAOsEBABIAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA4LDwDALkMB85XY
-        Bf9voQT/FB4B8QwSANUEBgB4AAAAOAAAABoAAAAMAAAAIwAAAEQJDgCUCQ0A6S9GAfKFwQT/frcE/xgi
-        Ae0kNQArAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAHCg8A0Ups
-        AviW2gX/MUgB8wsOANUAAAA8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEBQUAZwkN
-        AO1chwP7nOMF/5nfBcwOFwBYAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAkP
-        AKk8VwL1ktQF/xklAfIJDgCWAAAAAwAAAAAAAAAAAAAAAAkJA1MJCAb4BgUE/A4NCuwAAAAWAAAAAAAA
-        AAAAAAAAAAAAGQoPANFBXwL1mt8F/xUfAfEDAwBPAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAADAwBYHywB8pbbBf8lNgHyCAoAgQAAAAAAAAADAAAAPQAAAAQAAAAAExINnl1WP/+YjWf/Lioe+wAA
-        AD0AAAAAAAAAFAAAADAAAAAAAAAABwoPAM5WfAP6g74E/wkNAO8AAAAYAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAABQkMAOd/uAT/TG8D+AkPAK8AAAAAAAAAAxMQDLwUEg79EhENwwAAAAcQDgqyXldA/52R
-        a/8uKh/zAAAAVQAAACEKCQfoDw4K8wUFA2AAAAAAAAAAEwkNAOl+twT/T3MD+AoPAJoAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAADBQBmMkkB843NBf8JDQDwAAAAFAAAAAAXFA+pOTUn/ZaLZf87Nyj+BgYE+y0p
-        HvyUiGX/sKB8/4F2W/0UEg7xBgYE9nZrU/2gkXD/FRMP8QAAAEQAAAAAAwMAUyAvAfGU1wX/Cg8A8wAA
-        ABkAAAAAAAAAAAAAAAAAAAAAAAAAAA0TAMl1qwT/RWUC9wYKAIAAAAAAAAAAABQTD6U1MST+lotm/5iN
-        Z/+QhmL/nZBs/4B1Wv9zaVH/koVm/7GhfP+omXb/saF8/52Pbv8SEQ3yAAAAQgAAAAAAAAAADBAA2Xuz
-        BP9BXwL0AgIAbAAAAAAAAAAAAAAAAAAAAAAAAAAOCA0A9JrfBf8PFgDxAAAAIAAAAAAAAAAAAAAAAxAQ
-        DL1OSDX+mI1n/3FoTf8ODQr/FxcR/yQkGv8WFQ//LCgf/6OUcv+xoXz/GhgT8QUFA2AAAAAAAAAAAAAA
-        AAAFBQBxQ2IC9nWqBP8OFADJAAAAAAAAAAAAAAAAAAAAAAAAAEEpOwHuh8QE/wsQAOEFBQNjBQUD9wQE
-        A/gHBwSwEA8Mq1dRPP9/dlb/CgoH/zs7LP86Oin/MjIl/0hIMv80NCT/IyAY/7Cge/8lIhvvAAAATgAA
-        ABEAAAAFAAAAAAAAACIUHgHvmN4F/wUIAPQAAAAAAAAAAAAAAAAAAAAAAAAAWjxXAvNypgT/DRQAvggI
-        Be4+PjD/VFQ9/xMSDfMcGhP8kIVh/zIvI/8rKyH/MjIp/0JCQP+IiIT/GRkY/0NDLv8iIRj/iX1g/4R4
-        XP8TEQ3xDw4L8QgHBeoAAAAIAAAAAwYIAPac4wX/CxAA8gAAAA4AAAAAAAAAAAAAAAAAAAByTnID/GOQ
-        A/8GBwLXAgIC/iwrIv8rKiD5ERAM+zIuI/6CeVj/ExIN/z4+MP8RERD/7u3n//7+/v+urq7/Kioi/1lZ
-        Pv+tnnr/saF8/7GhfP+xoXz/FhQQ7wAAAB8AAAAACQ4A4Cs+Ae8GCAD2AAAAGQAAAAAAAAAAAAAAAAAA
-        AHFNcQP7VHUL+0RCNf6QjXD/pp2D/6mfhf+pn4X/ioJs/h8dF/wYFxH/Ojos/xkZF//Pz8n//f38/4WF
-        hf8uLiP/Pj4s/4Z6Xv+woHv/kINl/46BY/8QDwzyAAAAGgAAAAAAAAAdAAAARAAAAC4AAAAAAAAAAAAA
-        AAAAAAAAAAAAXT1ZAvRWdwv6QD4y/oJ/Zf+VjXX/mI94/5iPeP9/d2T9IR8Y/ElFMv8eHhf/OTkt/xYV
-        FP8sLCv/GRkV/05ONv8SEQz/l4lq/19WQvoKCQfiEA4LzQ4NCp8AAAABAAAAJAAAAGYAAABmAAAAZgAA
-        ADEAAAAAAAAAAAAAAAAAAAAxHSsB7VyFB/wnJR39XlpF/2JfSvpjYE34Y2BN+EpJOvYoJh39kIZi/xcV
-        EP8iIhr/Sko1/01NNf9KSjT/HBsT/1FKOf+xoXz/EhAN8QAAACcAAAAAAAAAAAAAAAkREA3wWFRA/19d
-        SvlhX0v3DAsI8QAAABkAAAAAAAAAAAAAAAUHCgDzRl8L+1BMOv+elXL/rKeF/62phv+tqYb/k5Bz/xgW
-        EfyYjWf/j4Rg/0E8Lv8ICAb/BwcF/xkXEv9tY03/sKB8/7GhfP9FPzD0CwoIuQAAAAUAAAAAExMPiFBL
-        Ov6Mhmj/RkU9/4B9Zf9ycFn6Dw8MqgAAAAAAAAAAAAAAAAwQAK5ZggP+AwYF/ho0Nv4PJCb7BhES/BEy
-        NvUGEBH6XldA/4l/Xf9cVT7/j4Rg/7Cgev+xoXz/saF8/46BZP9vZU7/r597/7Cge/8sJx72AwMAZQAA
-        ABYREAz5pp14/xgYFv+vr63/Jycl/6ejgv8XFhLyAAAALwAAAAAAAAAAAAAANgoOAPgBLzr8AMb6/wGU
-        s/8BTFv/AtT+/wF9lf0qLiX+FBMO+w4NCrAMDAn4eXBT/62eeP9TTDr1CwoI4AkIB8I4Myj0dmxT/QoJ
-        B+gAAAAdAAAAGhISDvmmnXn/GxsZ/8LBv/8vLy3/o59+/xwcFfEAAAA2AAAAAAAAAAAAAAAtAAoM+gCb
-        w/8Bzvz/AZaz/wFMW/8C1P7/As32/wMkK/YDBgeuAAAAABMSDZ5dVj//mI1n/y0pH/cAAAA9AAAAAwwL
-        CagKCQfgAAAAIAAAAAAAAAAAFBQPllhUQP6BfGH/NzYw/3FuWv97eWD8Dw4LtgAAAAAAAAAAAAAAGgAR
-        FfUAkrj/Ac78/wK22v8BVmj/ASYu/wGWtP8C0/3/AsXs/wAhJ/IABQhkEQ8Mlzg0Jv9bVT7/GxkS/AAA
-        ADgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAMEBAN82ZgSf9xbVf/c3Fa/w4NC/IAAAAfAAAAAAAA
-        AAAAGyC+AHGO/wHK+/8Edoz/CyAk/ydMVP8XLDD/Gz9H/wY1P/8CyfH/Arne/wALDfIAAAAyFhQPmh0a
-        FqUPDwyFAAAABQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAvAAAAdwAAAHcAAAB3AAAAPwAA
-        AAAAAAAAAAAAEQARFfoAw/b/AZu9/xAqL/9z1+r/OGl0/xcuM/9vz+L/OXB8/wZRYf8C1P7/AVJi9AAC
-        BWwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAOwgLAIYAAAAKAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAABIAEJT/ADG+v8ITFr/VqGv/y9ic/8BLFD/AUuA/wweJf933vL/FUlU/wLU
-        /v8Bka3/AgoK1gAAAHAAAABmAAAAZgAAAGYAAABmAAAAZgAAAGYAAABmAAAAZgAAAGYEBQC7GSUB+wkM
-        AOUAAAA8AAAAAAAAAAAAAAAAAAAAAAAAAFsAUmj+AMf6/wgtNf9pxNX/DSg3/wFz1P8BmP7/CCIw/2zK
-        3P9T4v7/AtT+/wKjw/8OHQr4TW8C/UZmAvdGZgL3RmYC90ZmAvdGZgL3RmYC90ZmAvdGZgL3RmYC90do
-        AviIxgT/dqwE/xAXAPMKEACSAAAAAAAAAAAAAAAAAAAARgA/T/wAxvr/BkhW/1CWo/87dYX/AiI7/wM8
-        Zf8SKjL/dtvv/xE/SP8C1P7/AY6q/xkqCPlkkgP/b6IE/3KmBP9ypgT/cqYE/3KmBP9ypgT/cqYE/3Km
-        BP9ypgT/c6cE/5baBf+S1AX/MUcB9AgNANMAAAAAAAAAAAAAAAAAAAANABAT+gDA8v8Bp8v/Cx8j/27O
-        4P9ap7b/TZCd/3bb7/8rWWL/BWFz/wLU/v8BSVjzAgIAqgoPAJ0OFAC2DhQAuw4UALsOFAC7DhQAuw4U
-        ALsOFAC7DhQAuw4UALsHCgDhN1AC/wwRAPIICwCGAAAABQAAAAAAAAAAAAAAAAAAAAAAGR6sAGV//wDJ
-        +/8Di6b/Bxoe/ydVXv8yZnH/DiYr/wZNXP8Cz/j/ArLV/wALDe0AAAAIAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAMFAGIKDwDTAAAALwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        ABMAEhfuAH+h/wHN/P8Cwuj/AYeh/wGDnP8Cr9H/AtT+/wK53f8AFxvyAAQESAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAB8AFBjmAEdZ/QGfxv8C0Pr/AtT+/wK84f8Bb4b6AA0P8QADBlgAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAUADA5tABog3gAKDPoACAn5AA0Q5gAOD5YAAAAcAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAA/8AH//8AAf/8AAD/+AAAf/Af4D/wODgf4IgkD8EAAg/BAAEHwwABh4MA
-        A4eAAACHgAAAA4AAAEOAAABHgAAAA4AAAwGAAAEBwAAAAMAAAADACAMBgAA/AYAAP4MAA/8fAAAADwAA
-        AAcAAAAHAAAAB4AD/x+AB///wA///+Af//8=
+        iVBORw0KGgoAAAANSUhEUgAAArwAAAAyCAYAAAC+nwjCAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAAEbSURBVHhe7dZBEcAgAMAwbvjAwfDvBTHMwBT08sinCjrW
+        85419wUAgKLxFwEAoMLwAgCQZngBAEgzvAAApBleAADSDC8AAGmGFwCANMMLAECa4QUAIM3wAgCQZngB
+        AEgzvAAApBleAADSDC8AAGmGFwCANMMLAECa4QUAIM3wAgCQZngBAEgzvAAApBleAADSDC8AAGmGFwCA
+        NMMLAECa4QUAIM3wAgCQZngBAEgzvAAApBleAADSDC8AAGmGFwCANMMLAECa4QUAIM3wAgCQZngBAEgz
+        vAAApBleAADSDC8AAGmGFwCANMMLAECa4QUAIM3wAgCQZngBAEgzvAAApBleAADSDC8AAGmGFwCANMML
+        AECa4QUAIGzfDyuwalnEq68KAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="pictureBox3.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAA
+        7AAAAOwBeShxvQAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAADFSURBVFhHY1Bb
+        +txMY/mz/zTEzxjwgVEHjDpg1AGjDhh1ADYH2G94+b/65AeSccmx9yjmQDHpDkje//Y/OeDdj78o5kAx
+        igMuPnigePXu3WgQvv7kujDdHXDl/p34K/fu/gfhq/fumWF1gPHq5/+DdrwmGfttf4ViDhST7gAq41EH
+        jDpg1AGjDhjkDtBY8kJXY9mzG7TC6sufHYLaDQYYDqA3GHUAWQ649uC2EVDDVCrhPUBMmgMu378TDtNE
+        TTwIHHDPDAAPpLLHxFU3gwAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="pictureBox4.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAB
+        FAAAARQB+zng/wAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAF5SURBVFhHtZe9
+        TsMwFIXzUnEmljh9C9hAgGBCYuFFGRgqAVIlBpCaZCRwrusjkdQpTnx9pKu29vX9PvXHUou9NWddXT13
+        1rx2tjwvMgesC7DehCnsom/MCxZ+fA1tU976XvXIbGGQJ2wYmQ8u+MoiMYW7ArvorbkeLR5KVSIIRwnb
+        NeDFw3QTNbS1uXcNCemb8gqzviezBf7kWw7BorpENJzBpprEYjiDpmSJ1XAGzaslkuEMDi2WUIMzOBwt
+        oQ5nMORfiWxwBsNmJbLDGQwNSuA6Dd1wunAGw0MSo8oGZwCZlcgOl/S1uQy97aihtdWdb8sTBw984f5U
+        PokIOEtfYg4unzkewz9RLYlTcN8yf0+kSsTAGazrSiyBM9jXkVgDZ9CXJpECZ9C/TkIDzuDcMglNOIPz
+        cRI54AzmnJbw/9WO7/bGPLoGhciso/nCBFsMd5MNVTgzI7ETge1oMQOcCUhsIVBt8OQdm5/4Ltz43mwR
+        BnhfjmmrzS8qC4kOBKR2LAAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAA
+        7AAAAOwBeShxvQAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAADFSURBVFhHY1Bb
+        +txMY/mz/zTEzxjwgVEHjDpg1AGjDhh1ADYH2G94+b/65AeSccmx9yjmQDHpDkje//Y/OeDdj78o5kAx
+        igMuPnigePXu3WgQvv7kujDdHXDl/p34K/fu/gfhq/fumWF1gPHq5/+DdrwmGfttf4ViDhST7gAq41EH
+        jDpg1AGjDhjkDtBY8kJXY9mzG7TC6sufHYLaDQYYDqA3GHUAWQ649uC2EVDDVCrhPUBMmgMu378TDtNE
+        TTwIHHDPDAAPpLLHxFU3gwAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="pictureBox2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAB
+        FAAAARQB+zng/wAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAF5SURBVFhHtZe9
+        TsMwFIXzUnEmljh9C9hAgGBCYuFFGRgqAVIlBpCaZCRwrusjkdQpTnx9pKu29vX9PvXHUou9NWddXT13
+        1rx2tjwvMgesC7DehCnsom/MCxZ+fA1tU976XvXIbGGQJ2wYmQ8u+MoiMYW7ArvorbkeLR5KVSIIRwnb
+        NeDFw3QTNbS1uXcNCemb8gqzviezBf7kWw7BorpENJzBpprEYjiDpmSJ1XAGzaslkuEMDi2WUIMzOBwt
+        oQ5nMORfiWxwBsNmJbLDGQwNSuA6Dd1wunAGw0MSo8oGZwCZlcgOl/S1uQy97aihtdWdb8sTBw984f5U
+        PokIOEtfYg4unzkewz9RLYlTcN8yf0+kSsTAGazrSiyBM9jXkVgDZ9CXJpECZ9C/TkIDzuDcMglNOIPz
+        cRI54AzmnJbw/9WO7/bGPLoGhciso/nCBFsMd5MNVTgzI7ETge1oMQOcCUhsIVBt8OQdm5/4Ltz43mwR
+        BnhfjmmrzS8qC4kOBKR2LAAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="btnMinimizar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAA
+        7AAAAOwBeShxvQAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAADFSURBVFhHY1Bb
+        +txMY/mz/zTEzxjwgVEHjDpg1AGjDhh1ADYH2G94+b/65AeSccmx9yjmQDHpDkje//Y/OeDdj78o5kAx
+        igMuPnigePXu3WgQvv7kujDdHXDl/p34K/fu/gfhq/fumWF1gPHq5/+DdrwmGfttf4ViDhST7gAq41EH
+        jDpg1AGjDhjkDtBY8kJXY9mzG7TC6sufHYLaDQYYDqA3GHUAWQ649uC2EVDDVCrhPUBMmgMu378TDtNE
+        TTwIHHDPDAAPpLLHxFU3gwAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="btnClose.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAB
+        FAAAARQB+zng/wAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAF5SURBVFhHtZe9
+        TsMwFIXzUnEmljh9C9hAgGBCYuFFGRgqAVIlBpCaZCRwrusjkdQpTnx9pKu29vX9PvXHUou9NWddXT13
+        1rx2tjwvMgesC7DehCnsom/MCxZ+fA1tU976XvXIbGGQJ2wYmQ8u+MoiMYW7ArvorbkeLR5KVSIIRwnb
+        NeDFw3QTNbS1uXcNCemb8gqzviezBf7kWw7BorpENJzBpprEYjiDpmSJ1XAGzaslkuEMDi2WUIMzOBwt
+        oQ5nMORfiWxwBsNmJbLDGQwNSuA6Dd1wunAGw0MSo8oGZwCZlcgOl/S1uQy97aihtdWdb8sTBw984f5U
+        PokIOEtfYg4unzkewz9RLYlTcN8yf0+kSsTAGazrSiyBM9jXkVgDZ9CXJpECZ9C/TkIDzuDcMglNOIPz
+        cRI54AzmnJbw/9WO7/bGPLoGhciso/nCBFsMd5MNVTgzI7ETge1oMQOcCUhsIVBt8OQdm5/4Ltz43mwR
+        BnhfjmmrzS8qC4kOBKR2LAAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="btnGuardar.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAASAAAAAnCAYAAACv8ZWMAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAANHSURBVHhe7Z2vd+JAGEUjVyIrK5GVlcjKykokshK3/AeV
+        lUgkshJZWVlZWVlZufve7DclYQPhx7B7Cvee8w7wZZIo7pnMJJkKAOBb8rOq+spAGSoTQsjZZKT4v38V
+        Ojg+OtmFTzypqiflFyGERF7khrHSD12Uw+LRCaYrJ0wnVRbKTG3aLEkIOcHoP28f+L//rKx6YaE2ZXpG
+        cbLP2sEtG19y9aIJAJwxcsEP5VZueFTea66Yels02w3vqAPMagebq1a+ewUAJ4Mc0VPqnRZfml3E5u0I
+        +bh75QN86vdtbAIA6ETOuJI7cm/oTb8vY1M32iH3fD58oCgDAGyN3OGxY48T2yWv+t09bKNG7j7lng/y
+        AYC9sXTkkrdwylOU2wljpWs3feeyCwAORi7pyykfnV5Rg7kb+TNKAAAHI/Hch1teotREDS6jgS+9mO0C
+        gGLIKZ7YSoPSrb0gFcchoGmUAACKsdExKqZpdzW6ixIAQDHklnyV5dn15Q2K+uGR6nz5td+diwAAHcgx
+        aVpenrmOUhKQbxqygJ6jBABQHDkmPVMq5wyjlATk5zgsIGa/AOBoyDXpPkN9jqOUinmK7DFKAADFya6x
+        iKLUsNKyCABQmFbXICAA+BcgIAD4b6wTUL5B6CFKAADFkWtax4DuQkCzKAEAFCd3dlYFdB0CWkQJAKA4
+        coxf22oBNe4D+rpFOkoAAMWRY9KKOnLOTZT+oGJ6aZB7Q1ECACiG3OJHvvL7xppvR1TxITboAwCgLHJL
+        Hmv+e6hHGwex0e9u5YFUACiK3JIvv+6j1EQb85Oq7Q0AAPZATsnPm77re/syPSuNtl9GAwBgDXKJ34b4
+        arfo++bOjRrlpVa9oBiXYgBwEHJJXubL64NtdooaNJbRQEIAsC/yR3r0Qtn+XfNuqB3SMhrK7kurAsBZ
+        446L3PG1tLt+77bMl3aoL63qMaHlnYsAAGuQKzyjnsZ8FPd89nvPvHasL62ae0NDpXuJVQA4K+QFT2Kl
+        qfaIx3wOX13Z0tHBcm8oZ676JDKqfSeEnH7cERn7u1zg9zynO5wjXvXCbcqNH/tgykgHrxuOEEJyfIVk
+        KR13zFgn6CkDZdWKhJDzy43CRBUAfCeq6je+Mk9NWoeGZwAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="bunifuLabel1.BaseStylesheet" xml:space="preserve">
+    <value>#bunifu-label { padding: 0px; font-family: 'Yu Gothic Medium'; font-size: 18pt; width: 100%; height: 100%; font-style: normal; font-weight: bold; text-decoration: none; color: rgb(192, 0, 0); text-align: left; }</value>
+  </data>
+  <data name="btnModificar.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAASAAAAAnCAYAAACv8ZWMAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAANHSURBVHhe7Z2vd+JAGEUjVyIrK5GVlcjKykokshK3/AeV
+        lUgkshJZWVlZWVlZufve7DclYQPhx7B7Cvee8w7wZZIo7pnMJJkKAOBb8rOq+spAGSoTQsjZZKT4v38V
+        Ojg+OtmFTzypqiflFyGERF7khrHSD12Uw+LRCaYrJ0wnVRbKTG3aLEkIOcHoP28f+L//rKx6YaE2ZXpG
+        cbLP2sEtG19y9aIJAJwxcsEP5VZueFTea66Yels02w3vqAPMagebq1a+ewUAJ4Mc0VPqnRZfml3E5u0I
+        +bh75QN86vdtbAIA6ETOuJI7cm/oTb8vY1M32iH3fD58oCgDAGyN3OGxY48T2yWv+t09bKNG7j7lng/y
+        AYC9sXTkkrdwylOU2wljpWs3feeyCwAORi7pyykfnV5Rg7kb+TNKAAAHI/Hch1teotREDS6jgS+9mO0C
+        gGLIKZ7YSoPSrb0gFcchoGmUAACKsdExKqZpdzW6ixIAQDHklnyV5dn15Q2K+uGR6nz5td+diwAAHcgx
+        aVpenrmOUhKQbxqygJ6jBABQHDkmPVMq5wyjlATk5zgsIGa/AOBoyDXpPkN9jqOUinmK7DFKAADFya6x
+        iKLUsNKyCABQmFbXICAA+BcgIAD4b6wTUL5B6CFKAADFkWtax4DuQkCzKAEAFCd3dlYFdB0CWkQJAKA4
+        coxf22oBNe4D+rpFOkoAAMWRY9KKOnLOTZT+oGJ6aZB7Q1ECACiG3OJHvvL7xppvR1TxITboAwCgLHJL
+        Hmv+e6hHGwex0e9u5YFUACiK3JIvv+6j1EQb85Oq7Q0AAPZATsnPm77re/syPSuNtl9GAwBgDXKJ34b4
+        arfo++bOjRrlpVa9oBiXYgBwEHJJXubL64NtdooaNJbRQEIAsC/yR3r0Qtn+XfNuqB3SMhrK7kurAsBZ
+        446L3PG1tLt+77bMl3aoL63qMaHlnYsAAGuQKzyjnsZ8FPd89nvPvHasL62ae0NDpXuJVQA4K+QFT2Kl
+        qfaIx3wOX13Z0tHBcm8oZ676JDKqfSeEnH7cERn7u1zg9zynO5wjXvXCbcqNH/tgykgHrxuOEEJyfIVk
+        KR13zFgn6CkDZdWKhJDzy43CRBUAfCeq6je+Mk9NWoeGZwAAAABJRU5ErkJggg==
 </value>
   </data>
 </root>
